--- a/portfolio/templates/home.html
+++ b/portfolio/templates/home.html
@@ -5,4 +5,11 @@
 <h2>{{project.title}}</h2>
 <P>{{project.description}}</P>
 <img src="{{project.image.url}}" alt="{{project.title}}">
+
+{% if project.url %}
+
+<a href="{{project.url}}">{{project.url}}</a>
+
+{% endif %}
+
 {% endfor %}
