--- a/portfolio/templates/partial/navbar.html
+++ b/portfolio/templates/partial/navbar.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <nav class="navbar navbar-expand-lg bg-dark">
   <div class="container">
     <a class="navbar-brand fw-bold fst-italic" href="/">FR</a>
@@ -11,7 +13,8 @@
           <a class="nav-link" href="{% url 'blog:posts' %}">Blog</a>
         </li>
         <li class="nav-item d-flex aling-items-center">
-          <a class="btn btn-primary btn-sn" href="#">Descargar CV</a>
+          <a class="btn btn-primary btn-sn" href="{% static 'portfolio/CV-Franco-Rutigliano.pdf'  %}"
+            target="_blank">Descargar CV</a>
         </li>
 
       </ul>
