--- a/portfolio/templates/partial/navbar.html
+++ b/portfolio/templates/partial/navbar.html
@@ -1,8 +1,8 @@
 {% load static %}
 
-<nav class="navbar navbar-expand-lg bg-dark">
+<nav class="navbar navbar-expand-lg bg-black">
   <div class="container">
-    <a class="navbar-brand fw-bold fst-italic" href="/">FR</a>
+    <a class="navbar-brand fw-bold fst-italic   text-light" href="/">FR</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -10,7 +10,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'blog:posts' %}">Blog</a>
+          <a class="nav-link text-light" href="{% url 'blog:posts' %}">Blog</a>
         </li>
         <li class="nav-item d-flex aling-items-center">
           <a class="btn btn-primary btn-sn" href="{% static 'portfolio/CV-Franco-Rutigliano.pdf'  %}"
